# qrgen

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/tuv/: Cargo.toml
crates/tuv-cli/: Cargo.toml
crates/tuv/examples/: dump.rs  generate_readme_assets.rs
crates/tuv/src/: bits.rs  lib.rs  qrcode.rs  types.rs
crates/tuv/src/encoder/: alphanumeric.rs  bits.rs  byte.rs  kanji.rs  mod.rs  mode.rs  numeric.rs  optimize.rs  padding.rs
crates/tuv/src/error_correction/: blocks.rs  generate.rs  mod.rs  reed_solomon.rs
crates/tuv/src/matrix/: data_placement.rs  format_info.rs  function_patterns.rs  masking.rs
crates/tuv/src/micro/: blocks.rs  codeword_debug.rs  data_placement.rs  format_info.rs  masking.rs  matrix.rs  mod.rs
crates/tuv/src/render/: mod.rs  pixels.rs  png.rs  string.rs  svg.rs  unicode.rs
crates/tuv/tests/: check_col6.rs  check_patterns.rs  check_timing.rs  check_v1.rs  compare_reference.rs  debug_a.rs  debug_full.rs  debug_function_patterns.rs  debug_matrix.rs  encoding_trace.rs  fnc1.rs  input_modes.rs  kanji_mode.rs  micro_scannable.rs  micro_versions.rs  parity_reference.rs  spec_verification.rs  transparent_background.rs  unicode_scale.rs  url_debug.rs
examples/: dump.rs
src/: lib.rs  main.rs  qrcode.rs
src/encoder/: alphanumeric.rs  mod.rs  padding.rs
src/error_correction/: mod.rs  qrcode_ecc_tables.rs
tests/: check_col6.rs  check_patterns.rs  check_timing.rs  check_v1.rs  compare_reference.rs  debug_a.rs  debug_full.rs  debug_function_patterns.rs  debug_matrix.rs  encoding_trace.rs  spec_verification.rs  url_debug.rs
(+6 files in other folders)
